small css improvements. Captures form data and starts sending it to numverify. addition of cyborg css.

--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@
 }
 
 body {
-	background-color: black;
-	color: white;
+	padding-top: 4em;
 	margin: auto;
 	text-align: center;
 }
 
 footer div {
+	display: inline-block;
 
 }
